--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/serve": "^1.16.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.12.12",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
