--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.2",
+    "@react-google-maps/api": "^2.18.1",
     "@remix-run/css-bundle": "^1.16.1",
     "@remix-run/node": "^1.16.1",
     "@remix-run/react": "^1.16.1",
@@ -16,6 +21,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.12",
+    "google-map-react": "^2.2.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -25,6 +31,7 @@
     "@remix-run/eslint-config": "^1.16.1",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/classnames": "^2.3.1",
+    "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
