--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/node": "^1.16.1",
     "@remix-run/react": "^1.16.1",
     "@remix-run/serve": "^1.16.1",
+    "axios": "^1.4.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.12",
@@ -37,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "autoprefixer": "^10.4.14",
+    "cookie": "^0.5.0",
     "eslint": "^8.38.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.27.5",
